feat: Add custom email validation regex